# moodleChat

./: .gitignore  LICENCE  README.md  background.js  chatUsage.js  content.js  manifest.chrome.json  manifest.firefox.json
.github/workflows/: lint.yml
bot_moodle/: .env.example  .pylintrc  pyproject.toml  requirements.txt
bot_moodle/bot_moodle/: __init__.py  app.py
bot_moodle/bot_moodle/core/: __init__.py  ai.py  headers.py  runner.py
bot_moodle/bot_moodle/db/: __init__.py  database.py
bot_moodle/bot_moodle/routes/: __init__.py  chat.py
bot_moodle_backend/: .env.exemple  moodle_history.duckdb  run.py  server.py
