[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-moodle"
version = "0.1.0"
description = "Bot acadêmico de programação integrado ao Moodle (C runner + IA)"
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "flask>=3.0",
    "flask-cors>=4.0",
    "duckdb>=0.10",
    "google-genai>=0.8",
    "python-dotenv>=1.0",
]

[project.scripts]
bot-moodle = "bot_moodle.app:main"

[project.optional-dependencies]
dev = [
    "pylint>=3.0",
    "pytest>=8.0",
    "pytest-flask>=1.3",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["bot_moodle*"]

# ─── Pylint ──────────────────────────────────────────────────────────────────

[tool.pylint.main]
recursive = true

[tool.pylint.format]
max-line-length = 100

[tool.pylint.messages_control]
disable = [
    "missing-module-docstring",
    "import-error",
]
